--- a/web/src/app/page.module.css
+++ b/web/src/app/page.module.css
@@ -1,23 +1,92 @@
-/* Home.module.css */
+/* Contenedor principal */
 .container {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   height: 100vh;
-  background-color: #f3f4f6; /* bg-gray-100 */
+  background-color: #f3f4f6; /* Color de fondo */
+  overflow: hidden; /* Para evitar que se vean barras de desplazamiento */
+  position: relative;
+  flex-direction: column;
+  padding: 20px; /* Espaciado alrededor de la pantalla */
 }
 
+/* Animación del logo */
+.intro {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Centra el logo */
+  /* El logo comienza desde aquí */
+}
+
+/* Logo */
+.logo {
+  width: 450px;  /* Puedes ajustar el tamaño según lo desees */
+  height: auto;
+  object-fit: contain; /* Mantiene la proporción del logo */
+}
+
+/* Estilos del contenido */
+.content {
+  opacity: 0; /* Empieza invisible */
+  transition: opacity 1s ease;
+  text-align: center;
+  position: sticky;
+  transform: translateX(-50%);
+}
+
+/* Hacemos visible el contenido */
+.content.visible {
+  opacity: 1;
+}
+
+/* Estilos del botón - Estilo rústico */
 .button {
-  font-size: 25px;
-  padding: 1rem 2rem; /* px-8 py-4 */
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #2d2d2d; /* Fondo oscuro para efecto rústico */
   color: white;
-  background-color: #3b82f6; /* bg-blue-500 */
-  border-radius: 1.375rem; /* rounded */
-  width: 250px;
-  height: 150px;
-  transition: background-color 0.3s ease; /* hover:bg-blue-600 transition */
+  border: 2px solid #333; /* Borde oscuro y grueso */
+  border-radius: 15px;
+  margin-top: 20px;
+  height: 80px;
+  width: 150px;
+  text-transform: uppercase; /* Letras en mayúsculas */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para agregar profundidad */
+  transition: background-color 0.3s ease, box-shadow 0.3s ease-in-out, transform 0.2s;
 }
 
+/* Efecto de hover en el botón */
 .button:hover {
-  background-color: #2563eb; /* bg-blue-600 */
+  background-color: #444; /* Cambio de color de fondo a gris más oscuro */
+  transform: scale(1.1); /* Aumentar tamaño */
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); /* Aumentar sombra al hacer hover */
+  border-color: #555; /* Cambiar borde al hacer hover */
+}
+
+/* Media query para hacer el diseño más responsive */
+@media (max-width: 768px) {
+  /* Ajustar la animación y posición del logo en pantallas pequeñas */
+  .intro {
+    top: 50%; /* Subir el logo más cerca de la parte superior */
+    transform: translate(20%, -20%); /* Mover el logo más a la derecha */
+  }
+
+  /* Reducción del tamaño del logo */
+  .logo {
+    width: 200px;
+  }
+
+  /* Ajuste de la posición del contenido */
+  .content {
+    top: 75%; /* Subir el contenido */
+  }
+
+  /* Tamaño más pequeño para el botón */
+  .button {
+    margin-top: -500px;
+    font-size: 14px;
+  }
 }
